Add line to vmoptions to address reflective access by a third-party library.